Source/WebKit2/WebProcess/WebPage/qt/LayerTreeHostQt.h
@@ -34,7 +34,7 @@ class WebPage;
 
 class LayerTreeHostQt : public LayerTreeHost, WebCore::GraphicsLayerClient
 #if USE(TILED_BACKING_STORE)
-                      , public WebLayerTreeTileClient
+                      , public WebGraphicsLayerClient
 #endif
 {
 public:
@@ -75,7 +75,8 @@ public:
     virtual void setVisibleContentRectAndScale(const WebCore::IntRect&, float scale);
     virtual void setVisibleContentRectTrajectoryVector(const WebCore::FloatPoint&);
     virtual void didSyncCompositingStateForLayer(const WebLayerInfo&);
-    virtual void didDeleteLayer(WebLayerID);
+    virtual void attachLayer(WebCore::WebGraphicsLayer*);
+    virtual void detachLayer(WebCore::WebGraphicsLayer*);
 #endif
 
 protected:
@@ -106,6 +107,7 @@ private:
     // The page overlay layer. Will be null if there's no page overlay.
     OwnPtr<WebCore::GraphicsLayer> m_pageOverlayLayer;
 
+    HashSet<WebCore::WebGraphicsLayer*> m_registeredLayers;
     HashMap<int64_t, int> m_directlyCompositedImageRefCounts;
 
     bool m_notifyAfterScheduledLayerFlush;
@@ -113,6 +115,8 @@ private:
 #if USE(TILED_BACKING_STORE)
     bool m_waitingForUIProcess;
     bool m_isSuspended;
+    WebCore::IntRect m_visibleContentsRect;
+    float m_contentsScale;
 #endif
     LayerTreeContext m_layerTreeContext;
     bool m_shouldSyncFrame;
